sampler/chain/projects/Test/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/Test/src/main/java/uber/Main.java:5: error: [NullAway] (INDEX= 0) (Covered) @NonNull field f not initialized
    Object f;
           ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/Test/src/main/java/uber/Main.java:13: error: [NullAway] (INDEX= 4) (Covered) @NonNull field t not initialized
    Object t;
           ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/Test/src/main/java/uber/Main.java:9: error: [NullAway] (INDEX= 2) (Covered) @NonNull field e not initialized
    Object e;
           ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/Test/src/main/java/uber/Main.java:15: error: [NullAway] (INDEX= 5) (Covered) @NonNull field y not initialized
    Object y;
           ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/Test/src/main/java/uber/Main.java:11: error: [NullAway] (INDEX= 3) (Covered) @NonNull field r not initialized
    Object r;
           ^
	(see http://t.uber.com/nullaway )
